# password_manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
app/: config.py  main.py
app/api/: router.py
app/api/dependencies/: application.py  dependency_keys.py  request.py  setup.py  usecase.py
app/api/utils/: exception_handler.py  exceptions.py  usecase.py
app/api/utils/enums/: base_enum.py  internal_exception_status.py
app/api/utils/sqlalchemy/: annotated_fields.py  base_db_model.py
app/api/utils/swagger/: default_response.py  docs.py  ui.py
app/api/v1/: router.py
app/api/v1/controllers/client/: password.py  router.py
app/api/v1/crud/: password.py
app/api/v1/crud/base/: base_crud.py
app/api/v1/models/: __init__.py  password.py
app/api/v1/schemas/: base_schema.py
app/api/v1/schemas/client/: password.py
app/api/v1/usecases/: get_password.py  password.py  search_passwords.py
app/core/: security.py
app/core/db/: database.py
tests/: test_password.py
