[tool.poetry]
name = "password-manager"
version = "0.1.0"
package-mode = false
description = "Менеджер паролей на FastAPI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "0.29.0"
fastapi = { extras = ["all"], version = "0.115.11" }
uvicorn = { extras = ["standard"], version = "0.30.1" }
sqlalchemy = "2.0.38"
alembic = "1.15.1"
pydantic = "2.10.6"
pydantic-settings = "2.3.4"
psycopg = { extras = ["binary"], version = "3.2.1" }
redis = "5.2.1"
cryptography = "44.0.2"
loguru = "0.7.2"
sqlalchemy-utils = "^0.41.2"
psycopg2-binary = "^2.9.10"
asgi-lifespan = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "0.25.3"
httpx = "^0.28.1"
mypy = "1.10.1"
pytest-cov = "5.0.0"
pre-commit = "3.7.1"
ruff = "0.5.0"
black = "^25.1.0"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
password-manager = "app.main:run_server"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v"
testpaths = [
    "tests",
]


[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    | migrations
    | tests
    | venv
    | .venv
    | .git
    | __pycache__
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.11
warn_return_any = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
